--- a/Library.Web/Areas/Admin/Views/Book/Index.cshtml
+++ b/Library.Web/Areas/Admin/Views/Book/Index.cshtml
@@ -49,7 +49,10 @@
                             <span style="margin-left: 10px;">ISBN: </span>
                             <span class="book-span">@book.Isbn</span>
                         </p>
-                        <p style="font-weight:bold;">@book.Id</p>
+                        <p>
+                            <span class="book-span" style="font-size: 18px;">Available: @book.CurrentQuantity / @book.Quantity</span>
+                            <span style="font-weight:bold;">@book.Id</span>
+                        </p>
                     </div>
                     <div class="col-sm-5">
                         <p class="book-description">@book.Description</p>
