--- a/Library.Web/Areas/Default/Views/Books/Index.cshtml
+++ b/Library.Web/Areas/Default/Views/Books/Index.cshtml
@@ -56,7 +56,7 @@
                 </div>
             </div>
             <div class="col-md-2">
-                <a onclick="SendAddToCartCommand('@book.Id')" class="btn btn-link" style="font-size: 16px; margin-top: 100px; color: black;"><span class="glyphicon glyphicon-shopping-cart"></span> Add to cart</a>
+                <a onclick="SendAddToCartCommand('@book.Id', '@book.CurrentQuantity')" class="btn btn-link" style="font-size: 16px; margin-top: 100px; color: black;"><span class="glyphicon glyphicon-shopping-cart"></span> Add to cart</a>
             </div>
         }
     </div>
