--- a/Library.Web/wwwroot/css/bookStyle.css
+++ b/Library.Web/wwwroot/css/bookStyle.css
@@ -75,7 +75,7 @@ li.dropdown:hover > .dropdown-menu {
     position: fixed;
     width: 300px;
     left: calc(50% - 150px);
-    height: 50px;
+    color: white;
     top: 100px;
     background-color: black;
 }
