--- a/Library.Web/Areas/Default/Views/Books/Index.cshtml
+++ b/Library.Web/Areas/Default/Views/Books/Index.cshtml
@@ -45,7 +45,9 @@
                         <p>
                             <span>EAN: </span>
                             <span class="book-span">@book.Ean</span>
-                            <span style="margin-left: 10px;">ISBN: </span>
+                        </p>
+                        <p>
+                            <span>ISBN: </span>
                             <span class="book-span">@book.Isbn</span>
                         </p>
                         <span class="book-span" style="font-size: 14px;">Available: @book.CurrentQuantity / @book.Quantity</span>
