--- a/Library.Web/Areas/Default/Views/Books/Book.cshtml
+++ b/Library.Web/Areas/Default/Views/Books/Book.cshtml
@@ -37,8 +37,8 @@
                 <span style="margin-left: 10px;">ISBN: </span>
                 <span class="book-span">@Model.Isbn</span>
             </p>
-            <p>
-                <span class="book-span" style="font-size: 18px;">Available: @Model.CurrentQuantity / @Model.Quantity</span>
+            <p style="margin-top: 5px;">
+                <span class="book-span" style="font-size: 14px;">Available: @Model.CurrentQuantity / @Model.Quantity</span>
             </p>
         </div>
         <div class="col-sm-5">
