--- a/Library.Web/Areas/Admin/Views/Book/Index.cshtml
+++ b/Library.Web/Areas/Admin/Views/Book/Index.cshtml
@@ -9,6 +9,9 @@
 <div class="row">
     <div class="col-md-3">
         <div class="form-group text-center" style="margin-top: 20px; margin-bottom: 20px;">
+            <div class="col-md-12" style="margin-bottom: 30px;">
+                    <a href="/Admin/Book/Add" style="font-size: 20px; color: black"><span class="glyphicon glyphicon-plus"></span> Add book</a>
+            </div>                
             <label style="color: black; font-family: Georgia; font-size: 14px; display: block;">Search by title</label>
             <input type="text" class="form-control" style="height: 20px; width:130px; display: inline-block; margin-left: 15px;" />
             <a href="#" class="btn btn-link" style="display:inline-block"><span class="glyphicon glyphicon-search" style="color: black; font-size: 20px;"></span></a>
