--- a/Library.Web/wwwroot/css/bookStyle.css
+++ b/Library.Web/wwwroot/css/bookStyle.css
@@ -24,7 +24,7 @@ li.dropdown:hover > .dropdown-menu {
     width: 100%;
 }
 
-.description-add-textbox{
+.description-add-textbox {
     min-height: 100px;
 }
 
@@ -63,7 +63,7 @@ li.dropdown:hover > .dropdown-menu {
     font-size: 12px;
 }
 
-.text-danger{
+.text-danger {
     font-weight: bold;
 }
 
@@ -82,4 +82,10 @@ li.dropdown:hover > .dropdown-menu {
 
 p {
     margin-bottom: 0;
+}
+
+.addBookPlus {
+    font-size: 50px;
+    border-radius: 30px;
+    border: 2px solid black;
 }
