--- a/Library.Web/Areas/Default/Views/Books/Index.cshtml
+++ b/Library.Web/Areas/Default/Views/Books/Index.cshtml
@@ -9,8 +9,8 @@
     <div class="col-md-3">
         <div class="form-group text-center" style="margin-top: 20px; margin-bottom: 20px;">
             <label style="color: black; font-family: Georgia; font-size: 14px;">Search by title</label>
-            <input type="text" class="form-control" style="height: 20px; width:130px; display: inline-block; margin-left: 15px;" />
-            <a href="#" class="btn btn-link" style="display:inline-block"><span class="glyphicon glyphicon-search" style="color: black; font-size: 20px;"></span></a>
+            <input type="text" id="titleToSearch" class="form-control" style="height: 20px; width:130px; display: inline-block; margin-left: 15px;" />
+            <a onclick="SearchByTitle()" class="btn btn-link" style="display:inline-block"><span class="glyphicon glyphicon-search" style="color: black; font-size: 20px;"></span></a>
         </div>
     </div>
     <div class="col-md-9">
