--- a/Library.Web/wwwroot/css/bookStyle.css
+++ b/Library.Web/wwwroot/css/bookStyle.css
@@ -89,3 +89,9 @@ p {
     border-radius: 30px;
     border: 2px solid black;
 }
+
+.borderlessbtn {
+    padding: 0;
+    border: none;
+    background: none;
+}
