--- a/Library.Web/Areas/Default/Views/Books/Index.cshtml
+++ b/Library.Web/Areas/Default/Views/Books/Index.cshtml
@@ -10,9 +10,10 @@
         <div class="form-group text-center" style="margin-top: 20px; margin-bottom: 20px;">
             <label style="color: black; font-family: Georgia; font-size: 14px;">Search by title</label>
             <form action="/Books/SearchByTitle">
-                <input type="text" name="Title" class="form-control" style="height: 20px; width:130px; display: inline-block; margin-left: 15px;" />
-                <input type="submit" />
-                @*<a href="/Books/SearchByTitle" class="btn btn-link" style="display:inline-block"><span class="glyphicon glyphicon-search" style="color: black; font-size: 20px;"></span></a>*@
+                <input type="text" name="Title" class="form-control" style="height: 30px; width:130px; display: inline-block; margin-left: 15px;" />
+                <button type="submit" class="borderlessbtn">
+                    <span class="glyphicon glyphicon-search" style="color: black; font-size: 30px; margin-left: 10px;"></span>
+                </button>              
             </form>            
         </div>
     </div>
