--- a/Library.Web/Areas/Admin/Views/Book/Index.cshtml
+++ b/Library.Web/Areas/Admin/Views/Book/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Library.Application.Queries.Books.BookQuery>
+﻿@model Library.Application.Queries.PaginatedList<Library.Application.Queries.Books.BookQuery>
 @{
     <script src="~/js/admin.js"></script>
     <link rel="stylesheet" href="~/css/bookStyle.css" />
@@ -71,5 +71,6 @@
                 <button onclick="sendDeleteBookCommand('@book.Id')" type="button" class="btn btn-link" style="font-size: 20px; color: black;"><span class="glyphicon glyphicon-trash"></span></button>
             </div>
         }
+        @Html.Partial("~/Areas/Default/Views/Shared/_Pagination.cshtml", Model.PaginationInfo)
     </div>
 </div>
