--- a/Library.Web/Areas/Default/Views/Shared/_Layout.cshtml
+++ b/Library.Web/Areas/Default/Views/Shared/_Layout.cshtml
@@ -41,6 +41,8 @@
                                 <li><a href="/Admin/Book/Add"><span class="glyphicon glyphicon-plus"></span> Add new book</a></li>
                                 <li class="divider"></li>
                                 <li><a href="/Admin/Orders"><span class="glyphicon glyphicon-retweet"></span> Returns</a></li>
+                                <li class="divider"></li>
+                                <li><a href="/Admin/Users"><span class="glyphicon glyphicon-user"></span> Users</a></li>
                             </ul>
                         </li>
                     }
