--- a/Library.Web/Areas/Admin/Views/Users/Index.cshtml
+++ b/Library.Web/Areas/Admin/Views/Users/Index.cshtml
@@ -30,7 +30,7 @@
                 {
                     <tr>
                         <td class="col-md-4" style="border-color: black;">
-                            <a href="#" style="color: black; font-size: 16px;">@user.Username</a>
+                            <a href="/Admin/Users/GetOrders?UserId=@user.UserId" style="color: black; font-size: 16px;">@user.Username</a>
                         </td>
                         <td class="col-md-4" style="border-color: black;">
                             @Html.DisplayFor(m => user.UserId)
