--- a/Library.Web/Areas/Default/Views/Shared/_Pagination.cshtml
+++ b/Library.Web/Areas/Default/Views/Shared/_Pagination.cshtml
@@ -3,12 +3,28 @@
     var prevDisabled = !Model.HasPreviousPage ? "disabled" : "";
     var nextDisabled = !Model.HasNextPage ? "disabled" : "";
 }
+@{
+    var dict = new Dictionary<string, string>();
+    dict.Add("page", "1");
+    var method = "Index";
+    if (Model.BookTitle!=null && Model.BookTitle!= "")
+    {
+        method = "SearchByTitle";
+        dict.Add("Title", Model.BookTitle);
+    }
+    @if (Model.Genre.HasValue)
+    {
+        method = "SearchByGenre";
+    }
+}
 <div class="row col-lg-12">
 
     @if (Model.PageIndex > 1)
     {
-        <a asp-action="Index" asp-route-page="@(Model.PageIndex-1)" class="btn btn-default @prevDisabled">Previous</a>
-        <a asp-action="Index" asp-route-page="1" class="btn btn-default">1</a>
+        dict["page"] = (Model.PageIndex - 1).ToString();
+        <a id="pagination" asp-action="@method" asp-all-route-data="dict" class="btn btn-default @prevDisabled">Previous</a>
+        dict["page"] = "1";
+        <a id="pagination" asp-action="@method" asp-all-route-data="dict" class="btn btn-default">1</a>
     }
     @if (Model.TotalPages >= 2)
     {
@@ -16,35 +32,32 @@
         {
             @for (int i = Model.PageIndex - 5, j = 0; i < Model.PageIndex && j < 5 && i >= 1; i++, j++)
             {
-                <a asp-action="Index" asp-route-page="@i" class="btn btn-default">@i</a>
+                dict["page"] = i.ToString();
+                <a id="pagination" asp-action="@method" asp-all-route-data="dict" class="btn btn-default">@i</a>
             }
         }
         else
         {
             for (int i = 2; i < Model.PageIndex; i++)
             {
-                <a asp-action="Index" asp-route-page="@i" class="btn btn-default">@i</a>
+                dict["page"] = i.ToString();
+                <a id="pagination" asp-action="@method" asp-all-route-data="dict" class="btn btn-default">@i</a>
             }
         }
-        
-        <a asp-action="Index" asp-route-page="" class="btn btn-default disabled">@Model.PageIndex</a>
+
+        <a id="pagination" asp-action="@method" asp-route-page="" class="btn btn-default disabled">@Model.PageIndex</a>
 
         @for (int i = Model.PageIndex + 1, j = 0; i < Model.TotalPages && j < 5; i++, j++)
         {
-            <a asp-action="Index" asp-route-page="@i" class="btn btn-default">@i</a>
+            dict["page"] = i.ToString();
+            <a id="pagination" asp-action="@method" asp-all-route-data="dict" class="btn btn-default">@i</a>
         }
     }
     @if (Model.PageIndex < Model.TotalPages)
     {
-        <a asp-action="Index" asp-route-page="@(Model.TotalPages)" class="btn btn-default">@(Model.TotalPages)</a>
-        <a asp-action="Index" asp-route-page="@(Model.PageIndex+1)" class="btn btn-default @nextDisabled">Next</a>
+        dict["page"] = Model.TotalPages.ToString();        
+        <a id="pagination" asp-action="@method" asp-all-route-data="dict" class="btn btn-default">@(Model.TotalPages)</a>
+        dict["page"] = (Model.PageIndex + 1).ToString();
+        <a id="pagination" asp-action="@method" asp-all-route-data="dict" class="btn btn-default @nextDisabled">Next</a>
     }
-    
 </div>
-@* PRZYKŁAD DLA PAGINACJI I FILTRóW JAKBY TO WYGLĄDAŁO-MOŻNA BĘDZIE ZMIENIC @VIEWDATA TYLKO NA COŚ INNEGO *@
-@* <a asp-action="Index"
-       asp-route-page="@(Model.PageIndex - 1)"
-       asp-route-currentFilter="@ViewData["CurrentFilter"]"
-       class="btn btn-default @prevDisabled">
-        Previous
-    </a> *@
