--- a/Library.Web/Areas/Default/Views/Orders/Index.cshtml
+++ b/Library.Web/Areas/Default/Views/Orders/Index.cshtml
@@ -26,7 +26,7 @@
                 @foreach (var item in Model)
                 {
                     <tr>
-                        <td class="col-md-3" style="border-color: black;">
+                        <td class="col-md-3" style="border-color: black; font-weight: bold">
                             @Html.DisplayFor(m => item.OrderDate)
                         </td>
                         <td class="col-md-3" style="border-color: black;">
