--- a/Library.Web/wwwroot/css/bookStyle.css
+++ b/Library.Web/wwwroot/css/bookStyle.css
@@ -99,3 +99,24 @@ p {
 #pagination{
     margin-bottom: 30px;
 }
+
+.genres {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    text-align: center;
+}
+
+.agenre {
+    margin: 0 auto;
+    width: 200px;
+    display: block;
+    background-color: black;
+    border: 1px solid black;
+    border-radius: 20px;
+    margin-bottom: 20px;
+    color: white;
+}
+
+.agenre:hover{
+    color: gray;
+}
