--- a/Library.Web/Areas/Admin/Views/Book/Index.cshtml
+++ b/Library.Web/Areas/Admin/Views/Book/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Library.Application.Queries.PaginatedList<Library.Application.Queries.Books.BookQuery>
+@using Library.DomainModel.Enums
 @{
     <script src="~/js/admin.js"></script>
     <link rel="stylesheet" href="~/css/bookStyle.css" />
@@ -8,13 +9,24 @@
 
 <div class="row">
     <div class="col-md-3">
+        <div class="col-md-12 text-center" style="margin-bottom: 30px;">
+            <a href="/Admin/Book/Add" style="font-size: 20px; color: black"><span class="glyphicon glyphicon-plus"></span> Add book</a>
+        </div>
         <div class="form-group text-center" style="margin-top: 20px; margin-bottom: 20px;">
-            <div class="col-md-12" style="margin-bottom: 30px;">
-                <a href="/Admin/Book/Add" style="font-size: 20px; color: black"><span class="glyphicon glyphicon-plus"></span> Add book</a>
-            </div>
-            <label style="color: black; font-family: Georgia; font-size: 14px; display: block;">Search by title</label>
-            <input type="text" class="form-control" style="height: 20px; width:130px; display: inline-block; margin-left: 15px;" />
-            <a href="#" class="btn btn-link" style="display:inline-block"><span class="glyphicon glyphicon-search" style="color: black; font-size: 20px;"></span></a>
+            <label style="color: black; font-family: Georgia; font-size: 18px;">Search by title</label>
+            <form action="/Books/SearchByTitle">
+                <input type="text" name="Title" class="form-control" style="height: 30px; width:130px; display: inline-block; margin-left: 15px;" />
+                <button type="submit" class="borderlessbtn">
+                    <span class="glyphicon glyphicon-search" style="color: black; font-size: 30px; margin-left: 10px;"></span>
+                </button>
+            </form>
+        </div>
+        <div class="genres text-center">
+            <label style="color: black; font-family: Georgia; font-size: 18px; margin-bottom: 20px;">Search by genre</label>
+            @foreach (var genre in Enum.GetValues(typeof(Genre)))
+            {
+                <a href="/Books/GetByGenre?Genre=@genre.ToString()" class="agenre">@genre</a>
+            }
         </div>
     </div>
     <div class="col-md-9">
@@ -63,7 +75,7 @@
                             <span style="font-weight:bold;">@book.Id</span>
                         </p>
                     </div>
-                    <div class="col-sm-5">
+                    <div class="col-sm-5" style="display: block">
                         <p class="book-description">@book.Description</p>
                     </div>
                 </div>
