--- a/Library.Web/Areas/Admin/Views/Book/Add.cshtml
+++ b/Library.Web/Areas/Admin/Views/Book/Add.cshtml
@@ -57,7 +57,7 @@
             <div class="form-group">
                 @Html.LabelFor(m => m.Description, new { @class = "add-label" })
                 @Html.ValidationMessageFor(m => m.Description, "", new { @class = "text-danger" })
-                @Html.TextAreaFor(m => m.Description, new { @class = "form-control description-add-textbox" })
+                @Html.TextAreaFor(m => m.Description, new { @class = "form-control description-add-textbox", maxlength = 493 })
             </div>
             <div class="form-group">
                 <input type="file" name="files"/>
